--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
+/*# sourceMappingURL=styles.css.map */
