--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,10 @@
-<p>footer works!</p>
+<footer class="bg-dark pt-3">
+    <nav class="container">
+        <div class="input-group-text bg-dark text-white border-dark">
+            <p class="text-center">Sign up for our newsletter</p>
+            <input type="text" class="form-control" aria-label="Username">
+            <button type="button" class="btn btn-dark border-white">Subscribe</button>
+        </div>
+        <p class="text-center text-white"> &#169; 2023 Copyright Oksana Furman</p>
+    </nav>
+</footer>
