--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,1 +1,8 @@
-/* No CSS *//*# sourceMappingURL=navbar.component.css.map */
+.nav-link {
+  color: white;
+}
+
+.nav-link .dropdown-item:hover {
+  background-color: #736a6a;
+}
+/*# sourceMappingURL=navbar.component.css.map */
