--- a/src/styles.css
+++ b/src/styles.css
@@ -6,4 +6,8 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
+
+body {
+  background-color: antiquewhite;
+}
 /*# sourceMappingURL=styles.css.map */
