add products and detail pages

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,1 +1,8 @@
-/* No CSS *//*# sourceMappingURL=home.component.css.map */
+.container {
+  padding: 20px;
+}
+
+.container .headline {
+  text-align: center;
+}
+/*# sourceMappingURL=home.component.css.map */
