--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,17 @@
-<p>home works!</p>
+<div class="container">
+    <h1 class="headline">Pet Store</h1>
+    <h3 class="headline">Get yourself a pet</h3>
+    <br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, cupiditate adipisci corrupti temporibus perspiciatis voluptatem enim fugiat officiis libero saepe aut quidem atque culpa fugit obcaecati facere itaque pariatur. Eos illo odit vero similique
+        dolor eligendi libero neque optio, laboriosam perferendis, id tempora debitis veritatis soluta reiciendis aliquid consequatur quisquam.</p>
+
+    <h3 class="headline">Headline</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, cupiditate adipisci corrupti temporibus perspiciatis voluptatem enim fugiat officiis libero saepe aut quidem atque culpa fugit obcaecati facere itaque pariatur. Eos illo odit vero similique
+        dolor eligendi libero neque optio, laboriosam perferendis, id tempora debitis veritatis soluta reiciendis aliquid consequatur quisquam.</p>
+    <br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, cupiditate adipisci corrupti temporibus perspiciatis voluptatem enim fugiat officiis libero saepe aut quidem atque culpa fugit obcaecati facere itaque pariatur. Eos illo odit vero similique
+        dolor eligendi libero neque optio, laboriosam perferendis, id tempora debitis veritatis soluta reiciendis aliquid consequatur quisquam.</p>
+    <br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, cupiditate adipisci corrupti temporibus perspiciatis voluptatem enim fugiat officiis libero saepe aut quidem atque culpa fugit obcaecati facere itaque pariatur. Eos illo odit vero similique
+        dolor eligendi libero neque optio, laboriosam perferendis, id tempora debitis veritatis soluta reiciendis aliquid consequatur quisquam.</p>
+</div>
