--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,21 +11,21 @@
                 </li>
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" routerLink="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" routerLink="/products" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Pets
                     </a>
                     <ul class="dropdown-menu bg-dark text-white">
                         <li><a class="dropdown-item bg-dark text-white" routerLink="#">Dogs</a></li>
-                        <li><a class="dropdown-item bg-dark text-white" routerLink="#">Cats</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
+                        <li><a class="dropdown-item bg-dark text-white" routerLink="/products">Cats</a></li>
                         <li><a class="dropdown-item bg-dark text-white" routerLink="#">Birds</a></li>
                     </ul>
                 </li>
 
                 <li class="nav-item">
                     <a class="nav-link text-white" routerLink="#">Pet Food</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" routerLink="/cart">Cart <i class="bi bi-cart4"></i></a>
                 </li>
             </ul>
         </div>
