--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -1,1 +1,17 @@
-<p>products-list works!</p>
+<div class="container">
+    <h1 class="text-center m-3 p-3">Choose yourself a pet</h1>
+    <div class="row row-cols-3">
+        <div *ngFor="let val of products; index as i">
+            <div class="card" style="width: 18rem; height: 30rem">
+                <img src="{{ val.photo }}" class="card-img-top" alt="{{ val.name }}">
+                <div class="card-body">
+                    <h5 class="card-title">{{ val.name }}</h5>
+                    <!-- <p class="card-text"></p> -->
+                    <a class="btn btn-success mx-2" routerLink="/products/{{ i }}">Details</a>
+                    <a class="btn btn-danger mx-2" (click)="addToCart()">Buy</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
