add cart, fix buy btn

--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -6,6 +6,7 @@
         <h3>{{product.name}}</h3>
         <h6>This is {{ product.name }}. He is a {{ product.age }} years old {{ product.color }} {{ product.type }}. </h6>
         <p>description: {{ product.description }}</p>
+        <p>You can make {{ product.name }} your pet for just {{ product.price }} &#8364;.</p>
         <a class="btn btn-danger mx-2" (click)="addToCart()">Buy</a>
     </div>
 
