--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -8,7 +8,7 @@
                     <h5 class="card-title">{{ val.name }}</h5>
                     <!-- <p class="card-text"></p> -->
                     <a class="btn btn-success mx-2" routerLink="/products/{{ i }}">Details</a>
-                    <a class="btn btn-danger mx-2" (click)="addToCart()">Buy</a>
+                    <a class="btn btn-danger mx-2" (click)="addToCart(val)">Buy</a>
                 </div>
             </div>
         </div>
