--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,9 +1,10 @@
 footer {
+    margin-bottom: -16px;
+    width: 100%;
     .input-group-text {
         padding-left: 20px;
         padding-right: 20px;
         p {
-            // margin-left: 20px;
             margin-right: 20px;
             margin-top: 15px;
         }
