add hero, details, update other files

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -2,18 +2,14 @@ footer {
   margin-bottom: -16px;
   width: 100%;
 }
-
 footer .input-group-text {
   padding-left: 20px;
   padding-right: 20px;
 }
-
 footer .input-group-text p {
   margin-right: 20px;
   margin-top: 15px;
 }
-
 footer .input-group-text button {
   margin-left: 20px;
-}
-/*# sourceMappingURL=footer.component.css.map */
+}/*# sourceMappingURL=footer.component.css.map */
