--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,1 +1,5 @@
-<p>hero works!</p>
+<div class="hero">
+    <div class="inside">
+        <h1 class="text-center"> Best Pet Shop In The World</h1>
+    </div>
+</div>
