--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,8 +1,20 @@
 .container {
   padding: 20px;
 }
-
 .container .headline {
   text-align: center;
 }
-/*# sourceMappingURL=home.component.css.map */
+.container .card {
+  margin: 15px;
+  text-align: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.container .card img {
+  height: 85%;
+}
+.container .moreBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+}/*# sourceMappingURL=home.component.css.map */
