--- a/src/app/hero/hero.component.css
+++ b/src/app/hero/hero.component.css
@@ -1,1 +1,14 @@
-/* No CSS *//*# sourceMappingURL=hero.component.css.map */
+.hero {
+  width: 100%;
+  height: 30rem;
+  overflow: hidden;
+  background-image: url("../../assets/img/hero.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.hero .inside {
+  background-color: rgba(250, 235, 215, 0.6);
+}/*# sourceMappingURL=hero.component.css.map */
