--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,13 +11,13 @@
                 </li>
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" routerLink="/products" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" routerLink="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Pets
                     </a>
                     <ul class="dropdown-menu bg-dark text-white">
-                        <li><a class="dropdown-item bg-dark text-white" routerLink="#">Dogs</a></li>
-                        <li><a class="dropdown-item bg-dark text-white" routerLink="/products">Cats</a></li>
-                        <li><a class="dropdown-item bg-dark text-white" routerLink="#">Birds</a></li>
+                        <li><a class="dropdown-item bg-dark text-white" routerLink="/dogs">Dogs</a></li>
+                        <li><a class="dropdown-item bg-dark text-white" routerLink="/cats">Cats</a></li>
+                        <li><a class="dropdown-item bg-dark text-white" routerLink="/birds">Birds</a></li>
                     </ul>
                 </li>
 
@@ -25,7 +25,10 @@
                     <a class="nav-link text-white" routerLink="#">Pet Food</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" routerLink="/cart">Cart <i class="bi bi-cart4"></i></a>
+                    <a class="nav-link text-white position-relative" routerLink="/cart">Cart <i class="bi bi-cart4"></i>  <span class="position-absolute top-25 start-100 translate-middle badge rounded-pill bg-danger" *ngIf="cartService.items.length>0">
+                        {{cartService.items.length}}
+                      </span>
+                    </a>
                 </li>
             </ul>
         </div>
