--- a/src/app/product-detail/product-detail.component.css
+++ b/src/app/product-detail/product-detail.component.css
@@ -1,15 +1,10 @@
 .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .container .item {
   margin: 10px;
   width: 500px;
 }
-
 .container .item img {
   height: 500px;
-}
-/*# sourceMappingURL=product-detail.component.css.map */
+}/*# sourceMappingURL=product-detail.component.css.map */
