--- a/src/app/products-list/products-list.component.css
+++ b/src/app/products-list/products-list.component.css
@@ -1,11 +1,8 @@
 .card {
   margin: 15px;
   text-align: center;
-  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-
 .card img {
   height: 80%;
-}
-/*# sourceMappingURL=products-list.component.css.map */
+}/*# sourceMappingURL=products-list.component.css.map */
